--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <section id="hero">
                 <div class="section-inner">
                     <img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img">
-                    <h1>Hi, I'm Boberick the llama.</h1>
+                    <h1>Hi, I'm Emily the llama.</h1>
                 </div>
             </section>
             <section id="about">
                 <div class="section-inner">
                     <h2>About me</h2>
-                    <p>I'm a really awesome llama. Every day I wake up, munch on some grass, do some coding and then go back to sleep.</p>
+                    <p>I'm a really awesome llama. Every day I wake up, munch on some lettuce, do some coding and then go back to sleep.</p>
                     <h3>Achievements</h3>
                     <ul>
                         <li>Bachelor of photogenic posing, 2010</li>
