--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     <h2>Contact me</h2>
                     <p>You can find me on:</p>
                     <ul>
-                        <li><a href="https://twitter.com/llama">Twitter</a></li>
+                        <li><a href="https://twitter.com/home">Twitter</a></li>
                         <li><a href="https://www.reddit.com/user/llama">Reddit</a></li>
                         <li><a href="https://www.instagram.com/llamasporfavor/">Instagram</a></li>
                     </ul>
-                    <p>Or, you can <a href="mailto:llama@codetheweb.blog">send me an email</a>.</p>
+                    <p>Or, you can <a href="mailto:emilyfortier8@gmail.com">send me an email</a>.</p>
                 </div>
             </section>
         </main>
