--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <section id="hero">
                 <div class="section-inner">
-                    <img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img">
+                    <img src="https://pbs.twimg.com/profile_banners/775532992252956673/1561163461/1080x360" class="profile-img">
                     <h1>Hi, I'm Emily the llama.</h1>
                 </div>
             </section>
