--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Emily the llama</title>
+        <title>Bentley the Cat</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -20,18 +20,18 @@
             <section id="hero">
                 <div class="section-inner">
                     <img src="https://pbs.twimg.com/profile_banners/775532992252956673/1561163461/1080x360" class="profile-img">
-                    <h1>Hi, I'm Emily the llama.</h1>
+                    <h1>Hi, I'm Bentley the Cat.</h1>
                 </div>
             </section>
             <section id="about">
                 <div class="section-inner">
                     <h2>About me</h2>
-                    <p>I'm a really awesome llama. Every day I wake up, munch on some lettuce, do some coding and then go back to sleep.</p>
+                    <p>I'm a really awesome cat. My mom's name is Emily and she's the best. I like to sleep, eat treats, run circles around the house, and kill flies in the window of my house.</p>
                     <h3>Achievements</h3>
                     <ul>
                         <li>Bachelor of photogenic posing, 2010</li>
-                        <li>Llamaness certification from the Llama Institute, 2014</li>
-                        <li>I coded a website, 2017</li>
+                        <li>Certified in scratching on my scratching post, 2014</li>
+                        <li>My mom coded this website, 2019</li>
                     </ul>
                 </div>
             </section>
